Add user authentication and the possibility to trigger/send a message to a specific user
update version.py

remove 2.7 from test

Add fixes to user authentication and send a message to a specific one

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python: [2.7, 3.6, 3.7, 3.8, "3.10"]
+        python: [3.6, 3.7, 3.8, "3.10"]
 
     name: Python ${{ matrix.python }} Test
 
